[package]
name = "fedcore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
regex = "1.10"
walkdir = "2.4"
colored = "2.1"
tempfile = "3.10"
dialoguer = "0.11"
rayon = "1.10"
indicatif = "0.17"
similar = "2.6"
